# reduced-wannier-representation

./: .gitignore  .gitmodules  CITATION.cff  README.md  environment.yml  requirements.txt
WanPy/: .gitignore  .gitmodules  README.md  pyproject.toml
WanPy/WanPy/: __init__.py  plot.py  wanpy.py  wpythtb.py
WanPy/tutorials/: Bloch.ipynb  Wannier.ipynb  models.py
calculations/: README.md  fig1.ipynb  fig10.ipynb  fig11.ipynb  fig12_13.ipynb  fig12_13.py  fig14.ipynb  fig14.py  fig2.ipynb  fig2.py  fig3_4_5.ipynb  fig3_4_5.py  fig3_4_7.ipynb  fig3_4_7.py  fig5_6.ipynb  fig5_6.py  fig6_7.ipynb  fig8_9.ipynb  fig8_9.py  models.py  z2_ins.ipynb
paper/latex-src/: main.tex
paper/latex-src-v1/: main.bbl  ref.bib
paper/latex-src-v2/: main.bbl  main.tex  ref.bib
paper/latex-src-v3/: main.bbl  main.tex  ref.bib
wanpy/: __init__.py  plot.py  wpythtb.py
