[project]
name = "wanpy"
version = "0.1.0"
description = "This package is designed for constructing maximally localized Wannier functions."
authors = [
    {name = "Trey Cole",email = "tbjcole@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "numpy (>=2.0.0)",
    "pythtb (>=1.8.0)",
    "matplotlib (>=3.10)",
    "scipy (>=1.15.0,<2.0.0)"
]

[project.urls]
Homepage = "https://github.com/treycole/WanPy"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
